# trs

./: __init__.py  admin_login.py  api.py  app.py  database.db  login.py  models.py  pyproject.toml  repeater.py  response_schema.py  ticket_view.py  user_login.py  utils.py  views.py
migrations/versions/: dc0a01d03322_.py
static/: swagger.yaml
templates/: base.html  index.html  sign_up.html
