[tool.poetry]
name = "trs"
version = "0.1.0"
description = ""
authors = ["Raazi Faisal <raazi.faisal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
flask = "^3.0.3"
sqlalchemy = "^2.0.29"
faker = "^24.11.0"
flask-sqlalchemy = "^3.1.1"
flask-restful = "^0.3.10"
flask-migrate = "^4.0.7"
flask-marshmallow = "^1.2.1"
jsonify = "^0.5"
marshmallow-sqlalchemy = "^1.0.0"
flask-login = "^0.6.3"
flask-jwt-extended = "^4.6.0"
flask-swagger-ui = "^4.11.1"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
